--- a/src/PlannerApp/Pages/Index.razor
+++ b/src/PlannerApp/Pages/Index.razor
@@ -7,3 +7,12 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<AuthorizeView>
+    <Authorized>
+        <h2>Welcome @context.User.FindFirst(System.Security.Claims.ClaimTypes.GivenName).Value</h2>
+    </Authorized>
+    <NotAuthorized>
+        <h2>Please login</h2>
+    </NotAuthorized>
+</AuthorizeView>
