--- a/src/PlannerApp/Pages/Index.razor
+++ b/src/PlannerApp/Pages/Index.razor
@@ -13,6 +13,6 @@ Welcome to your new app.
         <h2>Welcome @context.User.FindFirst(System.Security.Claims.ClaimTypes.GivenName).Value</h2>
     </Authorized>
     <NotAuthorized>
-        <h2>Please login</h2>
+        <MudLink Href="authentication/login">Login</MudLink>
     </NotAuthorized>
 </AuthorizeView>
