--- a/src/PlannerApp/Components/Authentication/RegisterForm.razor
+++ b/src/PlannerApp/Components/Authentication/RegisterForm.razor
@@ -1,18 +1,22 @@
 ﻿@namespace PlannerApp.Components
 
-<EditForm Model="_model" OnValidSubmit="LoginUserAsync">
-    <DataAnnotationsValidator />
+<EditForm Model="_model" OnValidSubmit="RegisterUserAsync">
+    <FluentValidationValidator/>
 
     <MudCard>
         <MudCardHeader>
             <CardHeaderContent>
                 <MudText Typo="Typo.h6">Welcome to PlannerApp v2.0</MudText>
+                <MudText Typo="Typo.body2">Create a new account</MudText>
             </CardHeaderContent>
         </MudCardHeader>
 
         <MudCardContent>
             <MudTextField Label="Email" HelperText="Required"  @bind-Value="@_model.Email" />
+            <MudTextField Label="First Name" HelperText="Required"  @bind-Value="@_model.FirstName" />
+            <MudTextField Label="Last Name" HelperText="Required"  @bind-Value="@_model.LastName" />
             <MudTextField InputType="InputType.Password" Label="Password" HelperText="Required" @bind-Value="@_model.Password" />
+            <MudTextField InputType="InputType.Password" Label="Confirm Password" HelperText="Required" @bind-Value="@_model.ConfirmPassword" />
 
             <ValidationSummary/>
 
@@ -23,8 +27,8 @@
         </MudCardContent>
 
         <MudCardActions>
-            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Disabled="_isBusy">Login</MudButton>
-            <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="RedirectToRegister" Class="ml-1" Disabled="_isBusy">Create Account</MudButton>
+            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-1" Disabled="_isBusy">Create Account</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="RedirectToLogin" Class="ml-1" Disabled="_isBusy">Login</MudButton>
         </MudCardActions>
     </MudCard>
 </EditForm>
