--- a/src/PlannerApp/Components/Plans/PlansList.razor
+++ b/src/PlannerApp/Components/Plans/PlansList.razor
@@ -1,11 +1,22 @@
 ﻿@namespace PlannerApp.Components
 
 @*UI View Selector*@
+<MudText Typo="Typo.h4">My Plans</MudText>
+
+<MudIconButton Icon="@Icons.Material.Filled.GridView" Color="Color.Primary" OnClick="SetCardsView" Disabled="_isCardsViewEnabled"></MudIconButton>
+<MudIconButton Icon="@Icons.Material.Filled.TableView" Color="Color.Primary" OnClick="SetTableView" Disabled="@(!_isCardsViewEnabled)"></MudIconButton>
+
 <div class="mt-4" />
-@*    <PlanCardsList FetchPlans="GetPlansAsync" 
-                   OnViewClicked="ViewPlan"
-                   OnEditClicked="EditPlan" 
-                   OnDeleteClicked="DeletePlanAsync"/>*@
-<PlansTable />
+@if (_isCardsViewEnabled)
+{
+    <PlanCardsList FetchPlans="GetPlansAsync"
+               OnViewClicked="ViewPlan"
+               OnEditClicked="EditPlan"
+               OnDeleteClicked="DeletePlanAsync" />
+}
+else
+{
+    <PlansTable />
+}
 
 
