19 Implement NavMenu & General Page Layout & Some Cosmetics

--- a/src/PlannerApp/Pages/Plans/Plans.razor
+++ b/src/PlannerApp/Pages/Plans/Plans.razor
@@ -1,6 +1,6 @@
 ﻿@page "/plans"
+<PAPage Title="My Plans" BreadcrumbItems="_breadcrumbItems">
+    <PlansList />
 
-<PlansList />
-@code {
+</PAPage>
 
-}
